Find results on simple lines are not marked correctly https://bugs.webkit.org/show_bug.cgi?id=129586

Reviewed by Andreas Kling.

Source/WebCore:

Tests: editing/text-iterator/count-mark-lineboxes.html
       editing/text-iterator/count-mark-simple-lines.html

TextIterator operating on simple lines failed to take the end of the range into account.
This also causes performance issues on long documents as range traversals would miss the end
node and end up going through the entire document.

* editing/TextIterator.cpp:
(WebCore::TextIterator::handleTextNode):

    Stop when hitting the range end on simple text nodes.

(WebCore::SimplifiedBackwardsTextIterator::handleTextNode):

    Use hasRenderedText test instead of linebox-only firstTextBox.

* testing/Internals.cpp:
(WebCore::Internals::countMatchesForText):
* testing/Internals.h:
* testing/Internals.idl:

    Add testing interface for counting and marking matches.

LayoutTests:

* editing/text-iterator/count-mark-lineboxes-expected.txt: Added.
* editing/text-iterator/count-mark-lineboxes.html: Added.
* editing/text-iterator/count-mark-simple-lines-expected.txt: Added.
* editing/text-iterator/count-mark-simple-lines.html: Added.



Canonical link: https://commits.webkit.org/147672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165002 268f45cc-cd09-0410-ab3c-d52691b4dbfc